<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- 계정 프로필 이미지 -->
        <ImageView
            android:id="@+id/account_iv_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/profile"
            tools:src="@drawable/ic_account" />

        <!-- Follow 버튼 -->
        <Button
            android:id="@+id/account_btn_follow_signout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/account_iv_profile"
            android:text="@string/follow"
            android:theme="@style/ButtonStyle" />

        <!-- 글 수/팔로워/팔로잉 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/account_btn_follow_signout"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toRightOf="@id/account_iv_profile"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <!-- 글 수 글자 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/post" />
                <!-- 글 수 숫자 -->
                <TextView
                    android:id="@+id/account_post_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <!-- 팔로워 글자 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/follower" />

                <!-- 팔로워 수 숫자 -->
                <TextView
                    android:id="@+id/account_follower_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <!-- 팔로잉 글자 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/following" />

                <!-- 팔로잉 숫자 -->
                <TextView
                    android:id="@+id/account_following_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <!-- 계정 상세화면의 recyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/account_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout> 